Affichage d'un message d'avertissement lors de la conception de tranche si aucune image de tranche n'existe. Corrections z-index Affichage du drapeau du pays de la tranche en cours

--- a/EdgeCreator/css/edgecreator.css
+++ b/EdgeCreator/css/edgecreator.css
@@ -22,7 +22,7 @@ span, td, th {
 	width:100%;
 	border-bottom:1px solid gray;
 	position: fixed;
-	z-index: 1100;
+	z-index: 99;
 	background-color: white;
 	padding-right:10px;
 }
