--- a/EdgeCreator/css/edgecreator_wizard.css
+++ b/EdgeCreator/css/edgecreator_wizard.css
@@ -27,7 +27,6 @@ button#connexion, button#deconnexion {
 
 .ui-dialog {
 	top: 70px !important;
-	z-index: 1000;
 }
 
 .ui-dialog.main {
